Fix Peer Table Selected
When selected, peer table item was not visible.

--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -842,6 +842,11 @@ QDialog#RPCConsole QTableView#peerWidget::item { /* Peers Table Items */
 color:#333;
 }
 
+QDialog#RPCConsole QTableView#peerWidget::item:selected { /* Peers Table Item Selected */
+background-color:#28333a;
+color:#fff;
+}
+
 QDialog#RPCConsole QPushButton#openDebugLogfileButton {
 max-width:60px;
 }
